<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Engauge</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Login Activity -->
    <string name="login_activity_label">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or_spaces"> or </string>
    <string name="sign_up">Sign Up</string>

    <!-- Signup Activity -->
    <string name="signup_activity_label">Sign Up</string>

    <!-- Homepage Activity -->
    <string name="homepage_activity_label">Homepage</string>
    <string name="favorites">Favorites</string>
    <string name="recent">Recent</string>

    <!-- Create Group Activity -->
    <string name="create_group_activity_label">Create Group</string>
    <string name="group_name">Group Name</string>
    <string name="group_short_description">Short Description</string>

    <!-- View Group Activity -->
    <string name="view_group_activity_label"></string>

    <!-- Add Question Activity -->
    <string name="add_question_activity_label"></string>

    <!-- Menus -->
    <string name="action_add_group">Add Group</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="first_name_input_hint">First name.</string>
    <string name="last_name_input_hint">Last name.</string>
    <string name="email_input_hint">Email.</string>
    <string name="password_input_hint">Password</string>
    <string name="reenter_password_input_hint">Reenter password</string>
    <string name="sign_up_button_label">Sign up</string>
    <string name="log_out">Log out</string>
    <string name="action_save_group">Save Group</string>

    <!-- Toasts -->
    <string name="toast_successful_create_group">You\'ve successfully created a group!</string>
    <string name="toast_unsuccessful_create_group">We had a problem saving your group...</string>
</resources>
